--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he" dir="rtl">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="תנה - פלטפורמת מרקטפלייס דיגיטלית שמחברת חקלאים קטנים ובינוניים ישירות עם צרכנים. בלי מתווכים, בלי כאב ראש, ובצורה הכי פשוטה."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700&family=Assistant:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <!--
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ULTRA.com</title>
+    <title>תנה - פלטפורמת מרקטפלייס דיגיטלית לחקלאים</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
